Fix podcast search UX (clear results on X, no auto-search on launch)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Super Podcast</string>
+    <string name="app_name">SuperPodcast</string>
+
+    <!-- Search -->
+    <string name="search_hint">Enter podcast search</string>
+    <string name="search">Search</string>
 </resources>
